--- a/MyerSplash/View/Uc/Dialog/TipsControl.xaml
+++ b/MyerSplash/View/Uc/Dialog/TipsControl.xaml
@@ -51,7 +51,7 @@
             <TextBlock
                 x:Uid="FeatureContent"
                 Foreground="{ThemeResource SystemBaseHighColor}"
-                Text="Support following system theme" />
+                Text="Support changing theme and language in settings." />
             <Image Margin="0,12,0,0" Source="/Assets/Image/prom.png" />
         </StackPanel>
     </Grid>
