--- a/MyerSplash/View/Uc/SettingsControl.xaml
+++ b/MyerSplash/View/Uc/SettingsControl.xaml
@@ -103,32 +103,10 @@
                             x:Name="CompactModeSwitch"
                             Grid.Column="1"
                             IsOn="{Binding Source={StaticResource AppSettings}, Path=EnableCompactMode, Mode=TwoWay}"
-                            Style="{StaticResource ToggleSwitchStyle}"
-                            Toggled="ToggleSwitch_Toggled" />
-                    </Grid>
-                    <Grid>
-                        <Grid.ColumnDefinitions>
-                            <ColumnDefinition />
-                            <ColumnDefinition />
-                        </Grid.ColumnDefinitions>
-                        <Grid Margin="8" Background="Black">
-                            <Image
-                                x:Name="CompactModeOffHintImage"
-                                Source="ms-appx:///Assets/Image/CompactModeOff.png"
-                                Tapped="CompactModeOffHintImage_Tapped" />
-                        </Grid>
-                        <Grid
-                            Grid.Column="1"
-                            Margin="8"
-                            Background="Black">
-                            <Image
-                                x:Name="CompactModeOnHintImage"
-                                Source="ms-appx:///Assets/Image/CompactModeOn.png"
-                                Tapped="CompactModeOnHintImage_Tapped" />
-                        </Grid>
+                            Style="{StaticResource ToggleSwitchStyle}" />
                     </Grid>
                     <Button
-                        Margin="12"
+                        Margin="12,0,0,0"
                         HorizontalAlignment="Stretch"
                         VerticalAlignment="Center"
                         HorizontalContentAlignment="Left"
@@ -141,7 +119,7 @@
                             Style="{StaticResource SettingItemButtonContentStyle}"
                             Text="Open the folder wallpapers are saved into" />
                     </Button>
-                    <StackPanel x:Name="AutoChangeSP" Margin="0">
+                    <StackPanel x:Name="AutoChangeSP" Margin="0 12 0 0">
                         <TextBlock
                             x:Uid="AutoChangeTitle"
                             Margin="12,0,0,0"
