--- a/MyerSplash/ResourceDictionary/StyleDictionary.xaml
+++ b/MyerSplash/ResourceDictionary/StyleDictionary.xaml
@@ -12,6 +12,7 @@
         <Setter Property="FontSize" Value="{StaticResource DialogTitleFontSize}" />
         <Setter Property="FontWeight" Value="Bold" />
         <Setter Property="HorizontalAlignment" Value="Left" />
+        <Setter Property="Padding" Value="8" />
     </Style>
     <Style x:Key="SettingItemButtonContentStyle" TargetType="TextBlock">
         <Setter Property="Margin" Value="{StaticResource SettingsButtonMargin}" />
