--- a/MyerSplash/View/Uc/Dialog/NetworkDiagnosisDialog.xaml
+++ b/MyerSplash/View/Uc/Dialog/NetworkDiagnosisDialog.xaml
@@ -2,26 +2,26 @@
     x:Class="MyerSplash.View.Uc.NetworkDiagnosisDialog"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:attach="using:JP.Utils.Framework"
     xmlns:cu="http://schemas.microsoft.com/winfx/2006/xaml/presentation?IsApiContractNotPresent(Windows.Foundation.UniversalApiContract,5)"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:fcu="http://schemas.microsoft.com/winfx/2006/xaml/presentation?IsApiContractPresent(Windows.Foundation.UniversalApiContract,5)"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     Width="{StaticResource DialogWidth}"
-    Height="500"
+    Height="530"
     d:DesignHeight="300"
     d:DesignWidth="400"
     mc:Ignorable="d">
 
     <Grid Background="{ThemeResource SystemControlChromeLowAcrylicElementBrush}" CornerRadius="2">
-        <StackPanel Margin="8">
+        <StackPanel>
             <StackPanel Orientation="Horizontal">
                 <TextBlock
                     x:Uid="NetworkDiagnosisTitle"
-                    Margin="12,12,0,0"
-                    HorizontalAlignment="Left"
                     FontSize="{StaticResource DialogTitleFontSize}"
                     FontWeight="Bold"
                     Foreground="{StaticResource MyerSplashThemeColorBrush}"
+                    Style="{StaticResource DialogTitleStyle}"
                     Text="NETWORK DIAGNOSIS" />
                 <ProgressRing
                     x:Name="ProgressRing"
@@ -29,7 +29,10 @@
                     Foreground="{StaticResource MyerSplashThemeColorBrush}"
                     IsActive="True" />
             </StackPanel>
-            <ScrollViewer Height="380" Margin="0,12">
+            <ScrollViewer
+                Height="380"
+                Margin="12"
+                attach:ScrollViewerStyleChanger.Style="{StaticResource ScrollViewerCommonStyle}">
                 <RichTextBlock
                     x:Name="InfoBlock"
                     Margin="12,12,0,0"
